monitoring/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-http-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik-public"

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              name: http
    host: grafana.testing.atikarooms.com
